@@ -52,5 +52,6 @@ use to draw their symbol is changed during the music fragment:
 </ul>
 
 <p align=right>
-Next: <a href=benchmarking.html>Man is the measure of things</a>: is
-a flexible architecture enough?
+Next:
+ <a href="scoring-esthetics.html">Beautiful numbers</a>: how
+LilyPond participates in the Miss World contests.
