@@ -46,11 +46,17 @@ computer music notation
 <li><a href=software.html>What's wrong with software</a>, or how
 Finale is not the end-all of music software.
 
-<li><a href=problem-statement.html>A better approach</a> to music printing.
+<li>
+<a href="problem-statement.html">How not to design software</a>,
+or: modeling music notation.
+<li>
+<a href="divide-and-conquer.html">Divide and conqueror</a>,
+A blue print for automated notation
 
 <li>
  <a href=implementing-notation.html>Impressive, but does it also
 work in theory</a>? A practical approach to capturing notation.
+
 <li><a href=engraving.html>Music engraving</a>, the art of printing
 music.
 
@@ -58,6 +64,9 @@ music.
 hackers attack the engraving problem.
 <li><a href=formatting-architecture.html>A flexible program
 architecture</a> lets us write engraving software 
+
+<li><a href="scoring-esthetics.html">Beautiful numbers</a>: how
+LilyPond participates in the Miss World contests.
 
 <li><a href=benchmarking.html>Notation benchmarking</a>: is a flexible
 architecture enough?
