@@ -76,5 +76,5 @@ simpler musical concept. Hence, software should reflect that separation.
 
 
 <p align=right>
-Next: <a href=divide-and-conquer.html>Divide and conqueror</a>
-A blue print for automated notation
+Next: <a href=divide-and-conquer.html>Divide and conqueror</a>,
+a blue print for automated notation
