@@ -102,6 +102,7 @@ doubt, measure the difference with a magnifying glass.
 
 
 <p align=right>
-Next: <a href=problem-statement.html>What we really want, but could not
-afford before</a>: better music notation software.
+Next: <a href="problem-statement.html">How not to design software</a>,
+or: modeling music notation.
+
 
